# bearcheck

./: LICENSE  Makefile  README.md  pyproject.toml
src/bearcheck/: __init__.py  check.py
tests/: test_check.py
