[project]
name = "bearcheck"
version = "0.1.1"
description = "Add your description here"
readme = "README.md"
license = "MIT"
authors = [
    { name = "Louis Burda", email = "dev@sinitax.com" }
]
requires-python = ">=3.12"
dependencies = [
    "beartype>=0.22.5",
]

[build-system]
requires = ["uv_build>=0.9.7,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "mypy>=1.18.2",
    "pytest>=9.0.0",
    "ruff>=0.14.4",
    "twine>=6.2.0",
]
