[project]
name = "bearcheck"
version = "0.1.4"
description = "Tiny beartype helper lib for inline type assertion and narrowing (not affiliated)"
readme = "README.md"
license = "MIT"
authors = [
    { name = "Louis Burda", email = "dev@sinitax.com" }
]
requires-python = ">=3.10"
dependencies = [
    "beartype>=0.22.5",
]

[build-system]
requires = ["uv_build>=0.9.7,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "coverage>=7.11.3",
    "mypy>=1.18.2",
    "pytest>=9.0.0",
    "ruff>=0.14.4",
    "twine>=6.2.0",
]
